# SovCoin

./: CONTRIBUTING.md  COPYING  INSTALL  LICENSE  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  deploy_rsa.enc  libsovconsensus.pc.in
autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
build-aux/m4/: sov_find_bdb48.m4  sov_qt.m4  sov_subdir_to_include.m4
contrib/: README.md  qt_translations.py  sov-qt.pro  sovd.bash-completion  tidy_datadir.sh
contrib/debian/: README.md  changelog  rules  (+13 more)
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  instantsend.md  keepass.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: genbuild.sh  setup.nsi.in
sov-docs/: protocol-documentation.md
src/: Makefile.am  Makefile.bench.include  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrdb.h  addressindex.h  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bip39.h  bip39_english.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.cpp  dbwrapper.h  dsnotificationinterface.h  governance-classes.cpp  (+88 more)
src/a/res/css/: light.css
src/bench/: .gitignore  bench.h
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: sov-config.h.in
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  uint256.h  validation.h
src/consensus/compat/: endian.h
src/consensus/crypto/: common.h
src/consensus/crypto/compat/: byteswap.h
src/crypto/: hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha512.h  sph_sha2.c  sph_sha512.c  sph_whirlpool.c
src/drafted/: governance-categories.h  governance-classes.h  governance-keys.cpp  governance-keys.h  governance-types.cpp  governance-types.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.cpp  block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  darksendconfig.cpp  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  masternodelist.cpp  modaloverlay.h  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  paymentrequestplus.h  paymentserver.cpp  paymentserver.h  (+58 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  darksendconfig.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  modaloverlay.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  settingspage.ui  signverifymessagedialog.ui  toolspage.ui
src/qt/locale/: sov_bg.ts  sov_de.ts  sov_en.ts  sov_es.ts  sov_fi.ts  sov_fr.ts  sov_it.ts  sov_ja.ts  sov_pl.ts  sov_pt.ts  sov_ru.ts  sov_sk.ts  sov_sv.ts  sov_vi.ts  sov_zh_CN.ts  sov_zh_TW.ts
src/qt/res/: sov-qt-res.rc
src/qt/res/a/res/: motion-qt-res.rc
src/qt/res/a/res/css/: drkblue.css  light-hires.css
src/qt/res/bb/css/: light-hires.css
src/qt/res/css/: light  light-hores.css  light.css
src/qt/res/icons/: sov.icns
src/qt/test/: Makefile  compattests.cpp  compattests.h  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/rpc/: blockchain.cpp  client.h  governance.cpp  masternode.cpp  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  server.cpp  server.h
src/script/: interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  sovconsensus.cpp  sovconsensus.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_sov_NativeSecp256k1.c  org_sov_NativeSecp256k1.h
src/secp256k1/src/java/org/sov/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bip39_tests.cpp  bloom_tests.cpp  bswap_tests.cpp  cachemap_tests.cpp  cachemultimap_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  governance_validators_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  ratecheck_tests.cpp  reverselock_tests.cpp  (+24 more)
src/test/data/: README.md  proposals-invalid.json  proposals-valid.json  sov-util-test.json
src/univalue/lib/: univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+132 files in other folders)
